@@ -7,7 +7,7 @@
 <chapter label="" xreflabel="Test floats" id="Top">
 <title>Test floats</title>
 
-<para>A list of floats at the begining.
+<para>A list of floats at the beginning.
 </para>
 <para>After the listoffloats.
 </para>
